Bug 284420 - Cannot remove a password
Summary: Cannot remove a password
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks: 282193
  Show dependency treegraph
 
Reported: 2011-10-19 00:10 UTC by David Edmundson
Modified: 2012-07-06 12:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2011-10-19 00:10:51 UTC
Select a password in an account edit dialog and clear the text box so it is empty.
Save and exit.
The password has not been deleted.

The properties model filters this out as a parameter to set, so KWallet is not updated. Accounts KCM code should check for password in parametersUnset and if it exists update kwallet.
Comment 1 xcojack@gmail.com 2011-11-01 15:48:47 UTC
https://git.reviewboard.kde.org/r/103016/
Comment 2 David Edmundson 2011-11-01 16:28:43 UTC
Git commit cdaed3922b61c44a1ee07e9e503edf2bd6d80485 by David Edmundson, on behalf of Przemek Czekaj.
Committed on 01/11/2011 at 17:26.
Pushed by davidedmundson into branch 'master'.

Remove passwords from kwallet when they're unset

REVIEW: 103016

BUG: 284420

M  +3    -1    src/edit-account-dialog.cpp

http://commits.kde.org/telepathy-accounts-kcm/cdaed3922b61c44a1ee07e9e503edf2bd6d80485