Remove passwords from kwallet when they're unset

REVIEW: 103016

BUG: 284420